--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,23 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 4,
   "type": "extension",
   "name": "Chronocat",
   "slug": "chronocat",
-  "description": "小巧轻便的 Red 实现",
-  "version": "0.0.54",
-  "author": {
-    "name": "Team Chrononeko",
-    "link": "https://github.com/chrononeko"
-  },
+  "description": "模块化的 Satori 框架",
+  "version": "0.2.4",
+  "thumbnail": "./chronocat.png",
+  "authors": [
+    {
+      "name": "Team Chrononeko",
+      "link": "https://github.com/chrononeko"
+    }
+  ],
   "repository": {
     "repo": "chrononeko/LiteLoaderQQNT-Plugin-Chronocat",
     "branch": "master"
   },
   "platform": ["win32", "linux", "darwin"],
+  "dependencies": [],
   "injects": {
     "main": "./src/main.js"
   }
